src/test/ui/codemap_tests/two_files.stderr
error[E0404]: `Bar` is not a trait
  --> $DIR/two_files.rs:16:6
   |
16 | impl Bar for Baz { }
   |      ^^^ not a trait
   |
   = note: type aliases cannot be used for traits

error: cannot continue compilation due to previous error

